# freealut

./: .cmake-format.yaml  .cvsignore  .gitignore  .indent.pro  .mailmap  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  README  README.md  XCompile-android.cmake  acinclude.m4  config.h.cmake_in  configure.ac
admin/: .cvsignore  .indent.pro  alut.dsp  alut.dsw  alut.sln  alut.vcproj  freealut.spec  hello_world.dsp  hello_world.vcproj  playfile.vcproj
admin/CMakeModules/: FindCompilerAttribute.cmake  FindCompilerFlagsSet.cmake  FindCompilerVisibility.cmake  FindConfigHelper.cmake  FindSleepFunction.cmake
admin/RPM/: .cvsignore  freealut.spec  freealut.spec.in
admin/VisualStudio6/: .cvsignore
admin/VisualStudio6/alut/: .cvsignore  alut.dsp
admin/VisualStudio6/hello_world/: .cvsignore  hello_world.dsp
admin/VisualStudio6/playfile/: .cvsignore  playfile.dsp
admin/VisualStudioDotNET/: .cvsignore
admin/VisualStudioDotNET/alut/: alut.vcproj
admin/VisualStudioDotNET/hello_world/: hello_world.vcproj
admin/VisualStudioDotNET/playfile/: playfile.vcproj
admin/autotools/: .indent.pro
admin/pkgconfig/: .cvsignore  Makefile.am  freealut-config.in  freealut.pc.in
doc/: alut.css  alut.html
examples/: .cvsignore  CMakeLists.txt  Makefile.am  hello_world.c  playfile.c
include/: Makefile.am
include/AL/: Makefile.am  alut.h
src/: CMakeLists.txt  Makefile.am  README  alut.h  alutBufferData.c  alutCodec.c  alutError.c  alutError.h  alutInit.c  alutInit.h  alutInputStream.c  alutInternal.h  alutLoader.c  alutUtil.c  alutVersion.c  alutWaveform.c
test_suite/: .cvsignore  Makefile.am  test_errorstuff.c  test_fileloader.c  test_memoryloader.c  test_retrostuff.c  test_version.c  test_waveforms.c
win_build/: alut.dsp  hello_world.dsp
