lib_LTLIBRARIES = lib@LIBRARY@.la

lib@LIBRARY@_la_SOURCES = alutError.h   \
                          alutError.c    \
                          alutInit.h    \
                          alutInit.c    \
                          alutLoader.c  \
                          alutVersion.c \
                          alutWaveform.c

AM_CPPFLAGS = -I$(top_srcdir)/include
