bin_PROGRAMS = test_version    \
               test_waveforms  \
               test_fileloader \
               test_retrostuff \
               test_errorstuff \
               test_version    \
               test_memoryloader

test_version_SOURCES      = test_version.c
test_waveforms_SOURCES    = test_waveforms.c
test_fileloader_SOURCES   = test_fileloader.c
test_memoryloader_SOURCES = test_memoryloader.c
test_retrostuff_SOURCES   = test_retrostuff.c
test_errorstuff_SOURCES   = test_errorstuff.c

INCLUDES = -I/usr/local/include/
LDADD = -L/usr/local/lib -lalut -lopenal -lpthread


